<resources>
    <string name="app_name">Memoir</string>
    <string name="login_to_your_account_tv">Login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="create_account">Create an account</string>
    <string name="name">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="image_item">story image</string>
    <string name="desc">description</string>
    <string name="author">author</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_story">Add story</string>
    <string name="detail_photo">Detail of the story</string>
    <string name="list_of_memories">List of memories</string>
    <string name="add_your_memories">Add your memories</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Tell my story!</string>
    <string name="your_uploaded_image_preview">Your uploaded image preview</string>
    <string name="success">success</string>
    <string name="registration_successful">Your account has successfully registered.</string>
    <string name="ok">OK</string>
    <string name="create_your_account">Create your account</string>
    <string name="account_title">account settings</string>
    <string name="settings_title">Settings page</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="empty_image_warning">Please select an image to upload</string>
    <string name="logo_of_the_app">logo of the app</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_page">Maps page</string>
    <string name="add_your_location">Add your location</string>
</resources>