<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/logo_name"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="28sp"
        android:paddingHorizontal="36dp"
        android:text="@string/welcome_back"
        android:textColor="@color/main_brown_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:text="@string/login_to_your_account_tv"
        android:textColor="@color/grey_30"
        android:paddingHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv"/>

    <com.taffan.storyapp.ui.custom.CustomEditTextEmpty
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="36dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_edttext"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/comfortaa"
        android:drawableStart="@drawable/round_mail_24"
        android:drawablePadding="8dp"
        android:paddingHorizontal="12dp"
        android:elevation="2dp"
        android:textSize="16sp"
        android:textColor="@color/main_brown_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"/>


    <com.taffan.storyapp.ui.custom.CustomEditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/custom_edttext"
        android:autofillHints="emailAddress"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:elevation="2dp"
        android:textSize="16sp"
        android:textColor="@color/main_brown_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/main_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="0dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/main_brown"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="10dp"
        android:backgroundTint="@color/main_brown_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>