<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    app:layoutDescription="@xml/activity_register_scene"
    tools:context=".ui.activity.RegisterActivity">

    <TextView
        android:id="@+id/text_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/create_your_account"
        android:textColor="@color/main_brown_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.taffan.storyapp.ui.custom.CustomEditTextEmail
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="56dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_edttext"
        android:drawableStart="@drawable/round_mail_24"
        android:drawablePadding="8dp"
        android:elevation="2dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textColor="@color/main_brown_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sign" />

    <com.taffan.storyapp.ui.custom.CustomEditTextEmpty
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:background="@drawable/custom_edttext"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="8dp"
        android:elevation="2dp"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textColor="@color/main_brown_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <com.taffan.storyapp.ui.custom.CustomEditText
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edttext"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:elevation="2dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textColor="@color/main_brown_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <com.taffan.storyapp.ui.custom.CustomEditText
        android:id="@+id/ed_confirm_register_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edttext"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:elevation="2dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textColor="@color/main_brown_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/main_brown"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_confirm_register_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:visibilityMode="ignore"
        app:layout_constraintEnd_toEndOf="parent" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>