<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="4dp"
    android:id="@+id/card_view_item"
    android:backgroundTint="@color/main_brown"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_item"
            android:background="@drawable/round_outline"
            android:clipToOutline="true"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_name"
            card_view:layout_constraintDimensionRatio="1:1"
            android:transitionName="story_photo_transition"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/iv_item_photo"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:transitionName="story_name_transition"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:transitionName="story_desc_transition"
            tools:text="@string/desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

